--- a/app/views/bs/rowColumn.scala.html
+++ b/app/views/bs/rowColumn.scala.html
@@ -1,8 +1,3 @@
 @(divClass: String)(content: Html)
-
-@bs.row {
-    @util.div(divClass) {
-        @content
-    }
-}
+@bs.row(util.div(divClass)(content))
 
