--- a/app/views/bs/formTextInput.scala.html
+++ b/app/views/bs/formTextInput.scala.html
@@ -1,8 +1,18 @@
 @(field: Field, label: String, placeHolder: String = "", typeName: String = "text", inputWidth: String = "col-sm-10", moreClasses: Seq[String] = Seq.empty, defaultValue: String = "")
-    @util.div("form-group @if(field.hasErrors) {has-error}") {
+
+@if(field.hasErrors) {
+    @util.div("form-group has-error") {
         @bs.label(label, field.name)
         @util.div(inputWidth) {
             @bs.input(field, typeName, placeHolder, moreClasses, defaultValue)
             @bs.helpSpan(field)
         }
     }
+} else {
+    @util.div("form-group") {
+        @bs.label(label, field.name)
+        @util.div(inputWidth) {
+            @bs.input(field, typeName, placeHolder, moreClasses, defaultValue)
+        }
+    }
+}
