--- a/app/views/bs/helpSpan.scala.html
+++ b/app/views/bs/helpSpan.scala.html
@@ -1,4 +1,6 @@
 @(field: Field)
+@import play.api.Play.current
+@import play.api.i18n.Messages.Implicits._
     @util.span("help-block") {
         @{
             field.error.map {
